2004-08-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-object.cpp, src/sp-object.h, src/sp-object-tree-iterator.h:
	  Move TreeIterator<SPObject *> specialization to snew file
	  sp-object-tree-iterator.h.
	  Mark several pointers as not being written through.
	  Correspondingly change TreeIterator specialization to
	  <SPObject const *> instead of <SPObject *>.

	* display/nr-arena-item.cpp, display/nr-arena-item.h:
	  Add NR::Matrix version of nr_arena_item_set_transform.

	* src/sp-item.h, src/sp-item.cpp (getRelativeTransform, partial_xform):
	  Mark pointers as not written through.

	* src/arc-context.cpp, src/draw-context.cpp, src/dyna-draw-context.cpp,
	  src/path-chemistry.cpp, src/rect-context.cpp,
	  src/selection-chemistry.cpp, src/seltrans.cpp, src/sp-flowdiv.cpp,
	  src/sp-flowregion.cpp, src/sp-flowtext.cpp, src/sp-item-group.cpp,
	  src/sp-item-notify-moveto.cpp, src/sp-item-transform.cpp,
	  src/sp-item.cpp, src/sp-item.h, src/sp-offset.cpp, src/sp-rect.cpp,
	  src/sp-shape.cpp, src/sp-use.cpp, src/spiral-context.cpp,
	  src/splivarot.cpp, src/star-context.cpp, src/text-context.cpp,
	  src/dialogs/item-properties.cpp:
	  Change SPItem->transform from NRMatrix to NR::Matrix.

	* src/libnr/nr-matrix-ops.h (operator*(NR::Matrix, NRMatrix)): new.

	* src/libnr/nr-matrix.h: NR::Matrix *= NR::translate: new operator.

	* src/nodepath.cpp: Mark NodeSort operator< as static.
	  Indentation as per CodingStyle.

	* src/libnr/nr-scale.h (NR::scale(double)): new constructor.

	* src/svg/svg-affine.cpp (sp_svg_transform_write), src/svg/svg.h:
	  Add NR::Matrix version.

2004-08-05  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/bezier-utils.cpp: Misc. minor changes.

2004-08-04  MenTaLguY  <mental@rydia.net>

	* configure.in, src/gc-object.h, src/refcounted.h:

	  start using libgc in earnest; Inkscape::Refcounted is now GC-aware

2004-08-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
